--- a/geometry/data.plist
+++ b/geometry/data.plist
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   data.plist
-   geometry
-
-   Created by Dmitry Tolmachev on 30.11.15.
-   Copyright (c) 2015 Al Digit. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-    
-    </dict>
+<dict>
+	<key>x1</key>
+	<integer>150</integer>
+	<key>y1</key>
+	<integer>50</integer>
+	<key>x2</key>
+	<integer>100</integer>
+	<key>y2</key>
+	<integer>200</integer>
+	<key>x3</key>
+	<integer>200</integer>
+	<key>y3</key>
+	<integer>200</integer>
+</dict>
 </plist>
