--- a/geometry/data2.plist
+++ b/geometry/data2.plist
@@ -2,17 +2,26 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>x</key>
-	<array>
-		<integer>0</integer>
-		<integer>0</integer>
-		<integer>0</integer>
-	</array>
-	<key>y</key>
-	<array>
-		<integer>0</integer>
-		<integer>0</integer>
-		<integer>0</integer>
-	</array>
+	<key>first</key>
+	<dict>
+		<key>x</key>
+		<integer>50</integer>
+		<key>y</key>
+		<integer>50</integer>
+	</dict>
+	<key>second</key>
+	<dict>
+		<key>x</key>
+		<integer>100</integer>
+		<key>y</key>
+		<integer>50</integer>
+	</dict>
+	<key>third</key>
+	<dict>
+		<key>x</key>
+		<integer>100</integer>
+		<key>y</key>
+		<integer>150</integer>
+	</dict>
 </dict>
 </plist>
