add some text in TrianglesView.swift and in *.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # folder logs
 geometryTests/
 geometryUITests/
+geometry.xcodeproj
+project.pbxproj
 
 # files
 geometry.xcodeproj
+UserInterfaceState.xcuserstate
