--- a/geometry/triangles.plist
+++ b/geometry/triangles.plist
@@ -1,78 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>1</key>
-        <dict>
-            <key>first</key>
-            <dict>
-                <key>x</key>
-                <integer>50</integer>
-                <key>y</key>
-                <integer>50</integer>
-            </dict>
-            <key>second</key>
-            <dict>
-                <key>x</key>
-                <integer>100</integer>
-                <key>y</key>
-                <integer>50</integer>
-            </dict>
-            <key>third</key>
-            <dict>
-                <key>x</key>
-                <integer>100</integer>
-                <key>y</key>
-                <integer>150</integer>
-            </dict>
-        </dict>
-        <key>2</key>
-        <dict>
-            <key>first</key>
-            <dict>
-                <key>x</key>
-                <integer>150</integer>
-                <key>y</key>
-                <integer>150</integer>
-            </dict>
-            <key>second</key>
-            <dict>
-                <key>x</key>
-                <integer>250</integer>
-                <key>y</key>
-                <integer>150</integer>
-            </dict>
-            <key>third</key>
-            <dict>
-                <key>x</key>
-                <integer>200</integer>
-                <key>y</key>
-                <integer>200</integer>
-            </dict>
-        </dict>
-        <key>3</key>
-        <dict>
-            <key>first</key>
-            <dict>
-                <key>x</key>
-                <integer>150</integer>
-                <key>y</key>
-                <integer>300</integer>
-            </dict>
-            <key>second</key>
-            <dict>
-                <key>x</key>
-                <integer>250</integer>
-                <key>y</key>
-                <integer>300</integer>
-            </dict>
-            <key>third</key>
-            <dict>
-                <key>x</key>
-                <integer>250</integer>
-                <key>y</key>
-                <integer>200</integer>
-            </dict>
-        </dict>
-    </dict>
+<array>
+	<array>
+		<array>
+			<integer>50</integer>
+			<integer>50</integer>
+		</array>
+		<array>
+			<integer>100</integer>
+			<integer>50</integer>
+		</array>
+		<array>
+			<integer>100</integer>
+			<integer>150</integer>
+		</array>
+	</array>
+	<array>
+		<array>
+			<integer>150</integer>
+			<integer>150</integer>
+		</array>
+		<array>
+			<integer>250</integer>
+			<integer>150</integer>
+		</array>
+		<array>
+			<integer>200</integer>
+			<integer>200</integer>
+		</array>
+	</array>
+	<array>
+		<array>
+			<integer>150</integer>
+			<integer>300</integer>
+		</array>
+		<array>
+			<integer>250</integer>
+			<integer>300</integer>
+		</array>
+		<array>
+			<integer>250</integer>
+			<integer>200</integer>
+		</array>
+	</array>
+</array>
 </plist>
