--- a/geometry/triangles.plist
+++ b/geometry/triangles.plist
@@ -2,47 +2,80 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
-	<array>
+	<dict>
+		<key>type</key>
+		<string>triangle</string>
+		<key>points</key>
 		<array>
-			<integer>50</integer>
-			<integer>50</integer>
+			<dict>
+				<key>x</key>
+				<integer>250</integer>
+				<key>y</key>
+				<integer>200</integer>
+			</dict>
+			<dict>
+				<key>x</key>
+				<integer>250</integer>
+				<key>y</key>
+				<integer>300</integer>
+			</dict>
+			<dict>
+				<key>x</key>
+				<integer>200</integer>
+				<key>y</key>
+				<integer>300</integer>
+			</dict>
 		</array>
+	</dict>
+	<dict>
+		<key>type</key>
+		<string>triangle</string>
+		<key>points</key>
 		<array>
-			<integer>100</integer>
-			<integer>50</integer>
+			<dict>
+				<key>x</key>
+				<integer>50</integer>
+				<key>y</key>
+				<integer>50</integer>
+			</dict>
+			<dict>
+				<key>x</key>
+				<integer>100</integer>
+				<key>y</key>
+				<integer>50</integer>
+			</dict>
+			<dict>
+				<key>x</key>
+				<integer>100</integer>
+				<key>y</key>
+				<integer>150</integer>
+			</dict>
 		</array>
+	</dict>
+	<dict>
+		<key>type</key>
+		<string>triangle</string>
+		<key>points</key>
 		<array>
-			<integer>100</integer>
-			<integer>150</integer>
+			<dict>
+				<key>x</key>
+				<integer>150</integer>
+				<key>y</key>
+				<integer>150</integer>
+			</dict>
+			<dict>
+				<key>x</key>
+				<integer>250</integer>
+				<key>y</key>
+				<integer>150</integer>
+			</dict>
+			<dict>
+				<key>x</key>
+				<integer>200</integer>
+				<key>y</key>
+				<integer>200</integer>
+			</dict>
 		</array>
-	</array>
-	<array>
-		<array>
-			<integer>150</integer>
-			<integer>150</integer>
-		</array>
-		<array>
-			<integer>250</integer>
-			<integer>150</integer>
-		</array>
-		<array>
-			<integer>200</integer>
-			<integer>200</integer>
-		</array>
-	</array>
-	<array>
-		<array>
-			<integer>150</integer>
-			<integer>300</integer>
-		</array>
-		<array>
-			<integer>250</integer>
-			<integer>300</integer>
-		</array>
-		<array>
-			<integer>250</integer>
-			<integer>200</integer>
-		</array>
-	</array>
+	</dict>
 </array>
 </plist>
