--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@
 project.pbxproj
 
 # files
-UserInterfaceState.xcuserstate
+*.moved-aside
+*.xcuserstate
+timeline.xctimeline
+playground.xcworkspace
+.build/
