--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ project.pbxproj
 
 # files
 UserInterfaceState.xcuserstate
+geometry.xcodeproj/project.xcworkspace/xcuserdata/todem5.xcuserdatad/UserInterfaceState.xcuserstate
 *.moved-aside
 *.xcuserstate
 timeline.xctimeline
