--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
-# folder logs
-project.pbxproj
+## Build generated
+build/
+DerivedData/
 
-# files
-todem5.xcuserdatad/UserInterfaceState.xcuserstate
-UserInterfaceState.xcuserstate
+## Various settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+
+## Other
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
